syntax = "proto3";

package truckgo;

option go_package = "github.com/alexandear/truckgo/grpcapi";

service ShippingService {
    rpc GetCoordinatesByAddress(LocationRequest) returns (LocationResponse);
    rpc CalculatePrice(PriceRequest) returns (PriceResponse);
    rpc CalculateRoute(RouteRequest) returns (RouteResponse);
    rpc FindTheNearestDriver(DriverRequest) returns (DriverResponse);
    rpc TestFunc(TestRequest) returns (TestResponse);
}

message LocationRequest {
    string address = 1;
}

message LocationResponse {
    double Latitude = 1;
    double Longitude = 2;
}

message PriceRequest {
    string origin = 1;
    string destination = 2;
}

message PriceResponse {
    string message = 1;
    double price = 2;
    double distance = 3;
    double time = 4;
}

message RouteRequest {
    string origin = 1;
    string destination = 2;
}

message RouteResponse {
    string message = 1;
    repeated Step steps = 2;
    double distance = 3;
    double time = 4;
}

message Step {
    string instruction = 1;
    double distance = 2;
    double duration = 3;
}

message DriverData {
    uint32 Id = 1;
    double Latitude = 2;
    double Longitude = 3;
}

message DriverRequest {
    string clientPosition = 1;
    repeated DriverData drivers = 2;
}

message DriverResponse {
    uint32 id = 1;
    double distance = 2;
    double duration = 3;
    string message = 4;
}

message TestRequest {
    string message = 1;
}

message TestResponse {
    string message = 1;
}
